codex-rs/tui/src/bottom_pane/request_user_input/snapshots/codex_tui__bottom_pane__request_user_input__tests__request_user_input_multi_question_last.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
                                                                                                                        
  Question 2/2 (2 unanswered)                                                                                           
  Share details.                                                                                                        
  ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────  
  ❯ Type your answer (optional)                                                                                         
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
  ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────  
  enter to submit all | ctrl + p / ctrl + n change question | esc to interrupt
